Mon Jul 14 21:08:04 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * integration/include/MPC:
        * integration/include/MPC/devenv.build:
        * integration/include/MPC/nmake.build:
        * integration/include/MPC/vc8.build:
        * integration/include/mpc.build:
        
          Slowly but surely trying to add support for different build
          types to CruiseControl scripts.

        * integration/include/devenv.build:

          Removed this file.

Mon Jul 14 19:52:23 UTC 2008  Hamilton Turner  <hamilton.a.turner@vanderbilt.edu>

        * etc/SQL/CUTS-unittest.sql:

          . Added SQL needed for unit tests

        * utils/BMW/website/App_Code/DataSetActions.cs:
        * utils/BMW/website/App_Code/LogVariables.cs:
        * utils/BMW/website/App_Code/UnitTestActions.cs:

          . Updates to go from log to msg_log and TestID to test_number

        * utils/BMW/website/UT_Chart.aspx.cs:
        * utils/BMW/website/UT_Create.aspx:
        * utils/BMW/website/UT_Create.aspx.cs:

          . Minor Updates

        * utils/BMW/website/charts:

          . Added charting library to BMW in correct place

        * utils/BMW/website/unittesting.aspx:
        * utils/BMW/website/unittesting.aspx.cs:

          . Overhauled the UI code to enforce data integrity. There should be
              almost no exceptions unhandled now

        * utils/BMW/website/xml/auto_generated.xml:

          . This file is auto-modified every time something is charted

Mon Jul 14 18:58:12 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * NEWS:

          Updated the NEW file.

Mon Jul 14 18:50:29 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * tests/MBT:
        * tests/MBT/CAPI_Logging_Overhead.xme:

          Test for benchmarking the logging overhead introduced in the
          CAPI client's runtime performance. This model contains a test
          that can be configured to log everything, or log nothing.
